Overflow y scroll fixes for Edge

--- a/public/styles/joanjonas.css
+++ b/public/styles/joanjonas.css
@@ -63,7 +63,7 @@ header.open .joanjonas {
 }
 
 #joanjonas_text .left {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     height: 100%;
 }
